welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:16: error: integer number too large
1223344455566667777888899999 
^